--- a/1_이미지분석/3_Fashion_ResNet.ipynb
+++ b/1_이미지분석/3_Fashion_ResNet.ipynb
@@ -62,16 +62,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = vgg16()\n",
-    "model"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -88,8 +78,8 @@
     "class custom_ResNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(custom_ResNet, self).__init__()\n",
-    "        self.vgg_layer = vgg16(weights=None) # 가중치를 가져오지 않음\n",
-    "        self.fc0 = nn.Linear(1000, 256) # VGG16의 최종의 출력을 1000에서 256으로 바꿈\n",
+    "        self.vgg_layer = resnet(weights=None) # 가중치를 가져오지 않음\n",
+    "        self.fc0 = nn.Linear(1000, 256) # resnet의 최종의 출력을 1000을 256으로 바꿈\n",
     "        self.fc1 = nn.Linear(256, 32)\n",
     "        self.fc2 = nn.Linear(32, 2)\n",
     "\n",
